[project]
name = "vocolab-extensions"
readme = "README.md"
description = "Library allowing extension of specific functionalities of the vocolab platform"
authors = [
    {name = "Nicolas Hamilakis", email="nicolas.hamilakis@ens.psl.eu"},
    {name = "CoML Team", email = "dev@zerospeech.com"}
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
keywords = [
    "speech", "machine-learning", "challenges",
    "research-tool", "benchmark-speech", "zerospeech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research"
]

dependencies = [
    "importlib_metadata;python_version<'3.10'",
    "PyYaml",
    "toml;python_version<'3.11'"
]

dynamic = ["version"]

[project.urls]
documentation = "https://github.com/zerospeech/vocolab-extensions/wiki"
homepage = "https://zerospeech.com/"
repository = "https://github.com/zerospeech/vocolab-extensions"

[project.scripts]
ld-managers = "vocolab_ext.leaderboards:list_items"

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
    "twine",
    "build",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["vocolab_ext*"]
exclude = ["tests*", "scripts*", "containers*", "samples*", "namespace-test*"]

[tool.setuptools.package-data]
vocolab = ['*.jinja2', '*.service', '*.socket', '*.wsgi', '*.conf', '*.env', '*.config']


[tool.setuptools_scm]